# guis

./: .gitignore  README.md  bbox_track_gui.py  environment.yml  plan_qc_bbox_editor.md  pyproject.toml  quality_check_bbox_video_preds.py
docs/: user-guide.md
utils/: __init__.py  bbox_utils.py  export_utils.py  tracker.py  visualization.py
